--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,12 @@
         }
     ],
     "require": {
-        "php" : "~5.6|~7.0",
-        "guzzlehttp/guzzle": "^6.3"
+        "php" : "7.1.*",
+        "guzzlehttp/guzzle": "6.3.*"
     },
     "require-dev": {
-        "phpunit/phpunit" : "^5.4.3",
-        "squizlabs/php_codesniffer": "3.*"
+        "phpunit/phpunit" : "5.7.*",
+        "squizlabs/php_codesniffer": "3.1.*"
     },
     "autoload": {
         "psr-4": {
@@ -35,7 +35,7 @@
         }
     },
     "scripts": {
-        "test": "phpunit",
+        "test": "vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover",
         "check-style": "phpcs -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests",
         "fix-style": "phpcbf -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests"
     },
