--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -17,16 +17,11 @@ checks:
         fix_identation_4spaces: true
         fix_doc_comments: true
 
-tools:
-    external_code_coverage:
-        timeout: 600
-        runs: 3
-
 build:
     tests:
         override:
             -
                 command: 'vendor/bin/phpunit --coverage-clover=coverage.clover'
                 coverage:
-                    file: 'some-file'
+                    file: 'coverage'
                     format: 'clover'
