--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,12 @@
         }
     ],
     "require": {
-        "php" : "7.1.*",
-        "guzzlehttp/guzzle": "6.3.*"
+        "php": "^7.2",
+        "guzzlehttp/guzzle": "^6.3"
     },
     "require-dev": {
-        "phpunit/phpunit" : "5.7.*",
-        "squizlabs/php_codesniffer": "3.1.*"
+        "phpunit/phpunit": "^8.1",
+        "squizlabs/php_codesniffer": "^3.4"
     },
     "autoload": {
         "psr-4": {
@@ -31,7 +31,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Gertoska\\OAuth2Request\\": "tests"
+            "Tests\\": "tests"
         }
     },
     "scripts": {
