--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -18,10 +18,11 @@ checks:
         fix_doc_comments: true
 
 build:
-    tests:
-        override:
-            -
-                command: 'vendor/bin/phpunit --coverage-clover=coverage.clover'
-                coverage:
-                    file: 'coverage'
-                    format: 'clover'
+    nodes:
+        coverage:
+            tests:
+                override:
+                    - command: ./vendor/bin/phpunit --coverage-clover=coverage.clover
+                      coverage:
+                          file: coverage.clover
+                          format: clover
